--- a/package.json
+++ b/package.json
@@ -79,14 +79,14 @@
     "solc": "0.5.10",
     "temp": "0.8.3",
     "terser-webpack-plugin": "1.3.0",
-    "web3": "1.0.0-beta.35",
+    "web3": "1.2.1",
     "webpack": "4.17.1",
     "webpack-bundle-size-analyzer": "2.7.0",
     "webpack-cli": "3.1.0"
   },
   "optionalDependencies": {
     "ethereumjs-wallet": "0.6.3",
-    "web3": "1.0.0-beta.35"
+    "web3": "1.2.1"
   },
   "repository": {
     "type": "git",
